# tur

./: AGENTS.md  Cargo.toml  README.md  build.rs  clippy.toml  rustfmt.toml  tur.code-workspace
.config/: nextest.toml
assets/: banner.txt
benches/: tur.rs
kernels/: rms_norm_linear.metal
src/: lib.rs  main.rs
src/backend/: audio_encoder.rs  batch_manager.rs  chat_template.rs  engine.rs  factory.rs  guidance.rs  memory_pool.rs  mod.rs  pipeline.rs  prefix_cache.rs  progress.rs  scheduler.rs  tokenizer.rs  tools.rs
src/models/: granite_41.rs  kv_cache.rs  mod.rs  qwen3.rs  qwen35.rs  qwen3_5.rs
src/models/attention/: mod.rs
src/models/attention/cpu_flash/: causal.rs  mod.rs  standard.rs  varlen.rs
src/models/layers/: fused.rs  linear.rs  mamba.rs  mod.rs  norm.rs
src/server/: mod.rs  types.rs  worker.rs
src/server/routes/: chat.rs  models.rs
src/shared/: errors.rs  mod.rs
src/weights/: downloader.rs  gguf_varbuilder.rs  mod.rs
tests/: common.rs  engine_integration.rs  granite_41_integration.rs  pipeline_integration.rs  qwen35_integration.rs  qwen3_integration.rs  server_integration.rs
