[package]
name = "tur"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = "0.10.1"
candle-nn = "0.10.1"
attention-rs = { git = "https://github.com/guoqingbao/attention.rs.git", version="0.5.3", rev = "8f89810" }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
thiserror = "2.0.18"
parking_lot = "0.12.5"
metal = { version = "0.33.0", features = ["mps"], optional = true }
hf-hub = "0.5.0"
clap = { version = "4.6.1", features = ["derive", "env"] }

[features]
default = ["metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "attention-rs/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "attention-rs/metal", "dep:metal"]
