[package]
name = "tur"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
# candle-flash-attn = "0.10.2"
tokenizers = "0.21"
llguidance = { version = "1.7.5", default-features = false, features = ["lark"] }
toktrie_hf_tokenizers = "1.7.5"
toktrie = "1.7.5"

serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
thiserror = "2.0.18"
parking_lot = "0.12.5"
metal = { version = "0.33.0", features = ["mps"], optional = true }
hf-hub = "0.5.0"
clap = { version = "4.6.1", features = ["derive", "env"] }
either = { version = "1.15.0", features = ["serde"] }
num-traits = "0.2.19"
rayon = "1.12.0"
libc = { version = "0.2.147" }
half = "2.7.1"

[features]
default = ["metal"]
flash-attn = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "dep:metal"]
