[package]
name = "tur"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "A strong inference engine"
repository = "https://github.com/danylokravchenko/tur"
authors = ["danylo.kravchenko.r@gmail.com"]
license-file = "LICENSE"
readme = "README.md"
publish = false

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
# candle-flash-attn = "0.10.2"
tokenizers = "0.21"
llguidance = { version = "1.7.5", default-features = false, features = ["lark"] }
toktrie_hf_tokenizers = "1.7.5"
toktrie = "1.7.5"

serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
minijinja = { version = "2.19.0", features = ["builtins", "json"] }
thiserror = "2.0.18"
parking_lot = "0.12.5"
indicatif = "0.18.4"
uuid = { version = "1.23.1", features = ["v4"] }
metal = { version = "0.33.0", features = ["mps"], optional = true }
hf-hub = "0.5.0"
clap = { version = "4.6.1", features = ["derive", "env"] }
either = { version = "1.15.0", features = ["serde"] }
num-traits = "0.2.19"
rayon = "1.12.0"
libc = { version = "0.2.147" }
half = "2.7.1"
ahash = "0.8.12"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.1"

[dev-dependencies]
safetensors = "0.7.0"
bytemuck = "1.25.0"
criterion = {version = "0.8.2", features = ["html_reports"]}

[features]
default = ["metal"]
flash-attn = []
cuda = ["candle-core/cuda", "candle-nn/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "dep:metal"]

[[bench]]
name = "tur"
harness = false

[workspace.lints.rust]
unsafe_code = "warn"             # Warn unsafe code
missing_docs = "allow"           # Allow missing documentation
unused_must_use = "deny"         # Deny ignoring Result/Option returns

[workspace.lints.clippy]
multiple_crate_versions = "allow"
# ==============================================================================
# RESTRICTION GROUP - Explicitly opt-in to strict checks
# ==============================================================================
# These lints catch patterns that should never appear in the codebase

# Error Handling - No panics, unwraps, or expects
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "warn"
unreachable = "deny"
panic_in_result_fn = "deny"

# Memory & Performance
clone_on_ref_ptr = "warn"        # Cloning Arc/Rc is cheap, document it
unnecessary_cast = "warn"
redundant_clone = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"

# Async patterns
await_holding_lock = "deny"      # Never hold locks across await points
await_holding_refcell_ref = "deny"

# Code Quality
dbg_macro = "warn"               # Remove debug prints before commit
print_stdout = "warn"            # Use proper logging instead
print_stderr = "warn"
exit = "deny"                    # Don't call std::process::exit
mem_forget = "deny"              # Don't forget to drop resources

# String handling
string_add = "warn"              # Prefer format! or push_str
string_slice = "warn"            # Can panic on invalid UTF-8 boundaries

# ==============================================================================
# PEDANTIC GROUP - High quality code standards
# ==============================================================================
pedantic = { level = "warn", priority = -1 }

# Selectively allow some pedantic lints that may be too strict
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"     # Can be too noisy
missing_panics_doc = "allow"     # We don't panic anyway
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
similar_names = "allow"          # Sometimes similar names are fine
too_many_lines = "allow"         # Handled by cognitive complexity

# ==============================================================================
# NURSERY GROUP - Experimental but useful lints
# ==============================================================================
# These are newer lints that may have false positives but catch real issues
use_self = "warn"
option_if_let_else = "warn"
redundant_pub_crate = "warn"
suboptimal_flops = "warn"
imprecise_flops = "warn"

# ==============================================================================
# CARGO GROUP - Cargo.toml best practices
# ==============================================================================
cargo = { level = "warn", priority = -1 }

# ==============================================================================
# PERFORMANCE GROUP - Optimize hot paths
# ==============================================================================
perf = { level = "warn", priority = -1 }

# ==============================================================================
# STYLE GROUP - Consistent code style
# ==============================================================================
style = { level = "warn", priority = -1 }

# ==============================================================================
# COMPLEXITY GROUP - Reduce cognitive load
# ==============================================================================
complexity = { level = "warn", priority = -1 }

# ==============================================================================
# CORRECTNESS GROUP - Catch bugs
# ==============================================================================
correctness = { level = "deny", priority = -1 }

# ==============================================================================
# SUSPICIOUS GROUP - Likely bugs
# ==============================================================================
suspicious = { level = "warn", priority = -1 }

[profile.pre-release]
inherits = "release"
lto = false
codegen-units = 256

[profile.release]
lto = "fat" #  LLVM's link time optimizations
codegen-units = 1
panic = "abort"
